k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lib-frontend
  namespace: library
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lib-frontend
  template:
    metadata:
      labels:
        app: lib-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/peacdo/lib-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: library
spec:
  selector:
    app: lib-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
