k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ${KUBE_NAMESPACE}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ${DOCKER_REGISTRY}/lib-frontend:${TAG}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /lib/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /lib/
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ${KUBE_NAMESPACE}
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80

---
